--- a/languages/zh-Hans.yml
+++ b/languages/zh-Hans.yml
@@ -1,4 +1,3 @@
-
 menu:
   home: 首页
   archives: 归档
@@ -14,12 +13,9 @@ sidebar:
   categories: 分类
   tags: 标签
 tags: 
-  front: 目前共计
-  back: 个标签
-categories: 
-  front: 目前共计
-  back: 个分类
+  title: 目前共计 %d 个标签
+categories:
+  title: 目前共计 %d 个分类
 footer:
-  by: 由
-  drive: 强力驱动
+  powered: 由 %s 强力驱动
   theme: 主题
