--- a/languages/zh-tw.yml
+++ b/languages/zh-tw.yml
@@ -13,9 +13,9 @@ sidebar:
   categories: 分類
   tags: 標籤
 tags:
-  title: 目前共有 %d 個標籤
+  title: "目前共有 %d 個標籤"
 categories:
-  title: 目前共有 %d 個分類
+  title: "目前共有 %d 個分類"
 footer:
-  powered: 由 %s 強力驅動
+  powered: "由 %s 強力驅動"
   theme: 主题
